--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-demo",
+  "name": "semantic-map",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,13 +15,13 @@
     "echarts": "^5.4.1",
     "json-loader": "^0.5.7",
     "pinia": "^2.0.29",
-    "vue": "^3.2.47",
+    "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.11"
+    "vite": "^4.1.0",
+    "vue-tsc": "^1.0.24"
   }
 }
